# p4-tarea0

./: .gitignore  CMakeLists.txt  README.md  clase_socio.cpp  clase_socio.hpp  declaraciones mascota.hpp  enums.hpp  makefile(el que hicimos)  makefile(nuestro)  principal.cpp  resp_lab0.txt
Veterinaria/: CMakeLists.txt  Makefile  cambios_listaconsulta,_socio,_add,_agregar_consulta_y_mascota.patch  main.cpp  makefile(POSTA)  makefile(el que funciona(v1))
Veterinaria/1_PresentationLayer/Controls/: Menu.cpp  Menu.h
Veterinaria/2_BusinessLayer/BusinessComponents/: VeterinariaAdministration.cpp  VeterinariaAdministration.h
Veterinaria/2_BusinessLayer/BusinessEntities/Classes/: Consulta.cpp  Consulta.h  Gato.cpp  Gato.h  ListaConsultas.cpp  ListaConsultas.h  ListaMascotas.cpp  ListaMascotas.h  Mascota.cpp  Mascota.h  Perro.cpp  Perro.h  Socio.cpp  Socio.h
Veterinaria/Cross-Cutting/: Const.cpp  Const.h  const.cpp
Veterinaria/Cross-Cutting/DataTypes/: DataConsulta.cpp  DataConsulta.h  DataGato.cpp  DataGato.h  DataMascota.cpp  DataMascota.h  DataPerro.cpp  DataPerro.h  Fecha.cpp  Fecha.h
Veterinaria/Cross-Cutting/Enums/: Genero.h  RazaPerro.h  TipoPelo.h
clases/: DTdataconsulta.cpp  DTdatagato.cpp  DTdatamascota.cpp  DTdataperro.cpp  DTfecha.cpp  clase_socio  claseconsulta.cpp  clasegato.cpp  clasemascota.cpp  claseperro.cpp  descripcion mascotas  fechas
controllers/: socio_controller.cpp
ejercicio2/: main.cpp  makefile
ejercicio2/Clases/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h
